# eksisozluk_scraper

./: .gitignore  LICENSE  README.md  eksisozluk_scraper.py  murat kurum.csv  pyproject.toml  requirements.txt
data/: hafize gaye erkan.csv
eksisozluk_scraper/: __init__.py  __main__.py  cli.py  console.py  scraper.py
src/: csvwriter.py  data_writer.py  eksisozluk_scraper.py  main.py
